--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,15 @@ astroid==2.9.3
 colorama==0.4.4
 dj-database-url==0.5.0
 Django==4.0.2
+django-environ==0.8.1
 djangorestframework==3.13.1
 gunicorn==20.1.0
 isort==5.10.1
 lazy-object-proxy==1.7.1
 mccabe==0.6.1
 platformdirs==2.4.1
+psycopg2==2.9.3
+psycopg2-binary==2.9.3
 pylint==2.12.2
 pytz==2021.3
 sqlparse==0.4.2
